# opengl_sandbox

./: CMakeLists.txt  CMakePresets.json
assets/: cmake_install.cmake
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glm-1.0.1-light/glm/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
shaders/: cmake_install.cmake  light.frag  object.frag  object.vert  shader.fs
src/: CMakeLists.txt  camera.cpp  camera.hpp  core.hpp  game.cpp  game.hpp  input.cpp  input.hpp  light.hpp  main.cpp  render.cpp  render.hpp  shader.cpp  shader.hpp  shapes.cpp  shapes.hpp  textures.cpp  textures.hpp  time.hpp
